--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -24,19 +24,47 @@ header {
   grid-column-start: 1;
   grid-column-end: span 3;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .agency-logo {
   border: solid black 2px;
   grid-column-start: 1;
   grid-column-end: 2;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.logo-img {
+  grid-column-start: 1;
+  grid-column-end: 2;
+}
+
+h1 {
+  grid-column-start: 2;
+  grid-column-end: 4;
+  padding-top: 7%;
+  // padding-left: 3%;
 }
 
 .log-out-section {
   border: solid black 2px;
-  grid-column-start: 4;
-  grid-column-end: 5;
+  grid-column-start: 3;
+  grid-column-end: 4;
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+
+.log-out-btn {
+  margin: 1%;
+  padding: 3%;
+  width: 50%;
+}
+
+.agency-slogan {
+  padding-bottom: 0%;
 }
 
 
@@ -49,8 +77,50 @@ aside {
   grid-column-end: 2;
   grid-row-start: 2;
   grid-row-end: span 5;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  grid-gap: 1%;
 }
 
+h2 {
+  text-align: center;
+  grid-row-start: 1;
+  grid-row-end: 2;
+}
+
+.total-spent-info {
+  text-align: center;
+  grid-row-start: 2;
+  grid-row-end: 3;
+}
+
+.trips-views-btns {
+  grid-row-start: 3;
+  grid-row-end: 4;
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+}
+
+.past-trips-btn {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  width: 150%;
+  height: 70%;
+}
+
+.upcoming-trips-btn {
+  grid-column-start: 4;
+  grid-column-end: 5;
+  width: 130%;
+  height: 70%;
+}
+
+.pending-trips-btn {
+  grid-column-start: 6;
+  grid-column-end: 7;
+  width: 150%;
+  height: 70%;
+}
 
 /////////////FORM SECTION /////////////////////////
 .trip-form-section {
@@ -59,8 +129,24 @@ aside {
   grid-column-end: span 2;
   grid-row-start: 2;
   grid-row-end: span 5;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
 }
 
+.from-instructions {
+  grid-row-start: 1;
+  grid-row-end: 2;
+}
+
+.tform-fill {
+  grid-row-start: 2;
+  grid-row-end: 3;
+}
+
+.cost-submit-form {
+  grid-row-start: 3;
+  grid-row-end: 4;
+}
 
 
 /////////////TRIPS CARDS SECTION /////////////////////////
