--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -44,7 +44,7 @@ h1 {
   grid-column-start: 2;
   grid-column-end: 4;
   padding-top: 7%;
-  // padding-left: 3%;
+  // padding-left: -5%;
 }
 
 .log-out-section {
@@ -131,6 +131,7 @@ h2 {
   grid-row-end: span 5;
   display: grid;
   grid-template-rows: repeat(3, 1fr);
+  grid-gap: 1%;
 }
 
 .from-instructions {
@@ -138,15 +139,58 @@ h2 {
   grid-row-end: 2;
 }
 
-.tform-fill {
+.form-fill {
   grid-row-start: 2;
   grid-row-end: 3;
 }
 
-.cost-submit-form {
-  grid-row-start: 3;
-  grid-row-end: 4;
+.form-planning-inputs {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  grid-gap: 3%;
 }
+
+.date-form-section {
+  display: flex;
+  flex-direction: column;
+  grid-column-start: 2;
+  grid-column-end: 3;
+}
+
+.destination-form-section {
+  display: flex;
+  flex-direction: column;
+  grid-column-start: 3;
+  grid-column-end: 4;
+}
+
+.days-form-section {
+  display: flex;
+  flex-direction: column;
+  grid-column-start: 4;
+  grid-column-end: 5;
+}
+
+.persons-form-section {
+  display: flex;
+  flex-direction: column;
+  grid-column-start: 5;
+  grid-column-end: 6;
+}
+
+.planning-bottom {
+  grid-column-start: 6;
+  grid-column-end: 8;
+}
+
+.planning-text {
+  text-align: center;
+}
+
+.planning-cost {
+  text-align: center;
+}
+
 
 
 /////////////TRIPS CARDS SECTION /////////////////////////
