Incorporate glide into the project

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -208,9 +208,10 @@ h2 {
   // margin: 0;
   // padding: 0;
   // box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  // This code affects glide styling
+  // display: flex;
+  // flex-direction: column;
+  // align-items: center;
 }
 // Posibilty to refactor this design styles code !!
 .past-trips-view {
