--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -1,6 +1,6 @@
 /* This is an example of using Sass, otherwise plain CSS works too*/
 @import "node_modules/@glidejs/glide/src/assets/sass/glide.core";
-@import "node_modules/@glidejs/glide/src/assets/sass/glide.theme";
+// @import "node_modules/@glidejs/glide/src/assets/sass/glide.theme";
 $primary-background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
 ;
 
@@ -209,9 +209,9 @@ h2 {
   // padding: 0;
   // box-sizing: border-box;
   // This code affects glide styling
-  // display: flex;
-  // flex-direction: column;
-  // align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 // Posibilty to refactor this design styles code !!
 .past-trips-view {
