--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -208,6 +208,16 @@ h3 {
   grid-row-end: span 9;
 }
 
+img {
+  width: 15%;
+  height: 11%;
+}
+
+.logo-img {
+  width: 100px;
+  height: 100px;
+}
+
 .trips-view-info-section {
   // margin: 0;
   // padding: 0;
