--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -31,6 +31,7 @@ main {
   justify-content: center;
   align-items: center;
   color: $gray-smoke-color;
+  font-family: $cursive-handle-font-family;
 }
 
 .login-header {
@@ -242,6 +243,7 @@ h4 {
 
 button {
   font-family: $roboto-font-family;
+  color: $primary-background;
 }
 
 p {
