Adjust styling in buttons and borders

--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -1,10 +1,12 @@
 // Colors:
 $white-smoke-color: whitesmoke;
 $gray-smoke-color: #485460;
+$border-color: solid black;
+$buttons-color: #808080c7;
 
 // Background Colors:
 $primary-background: linear-gradient(to right, #5a075d, #061f6f);
-$secondary-background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
+$secondary-background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(134, 34, 54, 1) 100%);
 
 //Fonts:
 // font-family: 'Handlee', cursive; -->
