--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -1,5 +1,10 @@
-/* This is an example of using Sass, otherwise plain CSS works too*/
 @import 'variables';
+@import 'login-section';
+@import 'header-section';
+@import 'aside-section';
+@import 'form-section';
+@import 'trip-cards-section';
+@import 'media-queries';
 
 body {
   background: $primary-background;
@@ -17,585 +22,6 @@ main {
   color: $white-smoke-color;
 }
 
-
-///// LOGIN Form Section ------------------------------->
-
-.login-form-container {
-  height: 650px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: $gray-smoke-color;
-  font-family: $cursive-handle-font-family;
-}
-
-.login-header {
-  text-align: center;
-  font-weight: 700;
-  color: $gray-smoke-color;
-}
-
-.login-form {
-  background: #fff;
-  padding: 40px 0;
-  box-shadow: 0 0 10px 0 rgba(255, 255, 255, 0.9);
-  border-radius: 15px;
-}
-
-.group {
-  position: relative;
-  margin: 45px;
-}
-
-.login-input {
-  background: none;
-  color: #c6c6c6;
-  font-size: 18px;
-  padding: 10px 10px 10px 5px;
-  display: block;
-  width: 100%;
-  border: none;
-  border-bottom: 1px solid #B06AB3
-}
-
-.login-input:focus {
-  outline: none;
-  color: #5e5d5d;
-}
-
-.login-label {
-  color: #B06AB3;
-  font-size: 16px;
-  position: absolute;
-  left: 5px;
-  top: 10px;
-  transition: 0.4s ease all;
-  pointer-events: none;
-}
-
-.login-input:focus~.login-label {
-  top: -14px;
-  font-size: 12px;
-  color: #2196f3;
-}
-
-.bar {
-  position: relative;
-  display: block;
-  width: 100%;
-}
-
-.bar::before {
-  content: "";
-  height: 2px;
-  width: 0%;
-  bottom: 0;
-  position: absolute;
-  background: linear-gradient(to right, #B06AB3, #4568DC);
-  transition: 0.7s ease width;
-  left: 0;
-}
-
-.login-input:focus~.bar::before {
-  width: 109%;
-}
-
-.login-button {
-  font-family: $roboto-font-family;
-  background: -webkit-linear-gradient(to right, #B06AB3, #4568DC);
-  background: linear-gradient(to right, #B06AB3, #4568DC);
-  border: none;
-  display: block;
-  width: 60%;
-  margin: 10px auto;
-  color: #fff;
-  height: 40px;
-  font-size: 16px;
-  cursor: pointer;
-}
-
-.login-button:hover {
-  box-shadow: 4px 3px 2px 0px #26222d;
-  opacity: 0.9;
-  transition: 0.2s ease width;
-  width: 70%;
-}
-
-.warnings {
-  width: 200px;
-  text-align: center;
-  margin: auto;
-  color: #B06AB3;
-  padding-top: 20px;
-}
-
-// -------------------------------------------------------->
-
-
-
-//// Header Section ////////////////////////
-header {
-  // border: $border-color 2px;
-  grid-column-start: 1;
-  grid-column-end: span 3;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-}
-
-.logo-img {
-  width: 100px;
-  height: 100px;
-}
-
-.agency-logo {
-  grid-column-start: 1;
-  grid-column-end: 2;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-}
-
-.logo-img {
-  grid-column-start: 1;
-  grid-column-end: 2;
-  padding-left: 15%;
-}
-
-h1 {
-  grid-column-start: 2;
-  grid-column-end: 4;
-  margin-bottom: 0;
-  margin-top: 5%;
-  font-size: 250%;
-  font-family:$cursive-marker-font-family;
-  color: $white-smoke-color;
-}
-
-.log-out-section {
-  grid-column-start: 3;
-  grid-column-end: 4;
-  display: inline-flex;
-  flex-direction: column;
-  align-items: center;
-
-}
-
-.log-out-btn {
-  margin: 1%;
-  padding: 3%;
-  width: 50%;
-}
-
-.agency-slogan {
-  padding-bottom: 0%;
-  font-size: 120%;
-  font-family: $cursive-handle-font-family;
-  color: $white-smoke-color;
-  margin: auto;
-}
-
-
-
-/////////////ASIDE SECTION /////////////////////////
-
-aside {
-  border: $border-color 1px;
-  border-radius: 5%;
-  grid-column-start: 1;
-  grid-column-end: 2;
-  grid-row-start: 2;
-  grid-row-end: span 5;
-  display: grid;
-  grid-template-rows: repeat(3, 1fr);
-  grid-gap: 1%;
-}
-
-h2 {
-  text-align: center;
-  grid-row-start: 1;
-  grid-row-end: 2;
-  font-family: $cursive-handle-font-family;
-  font-size: 200%;
-  margin-bottom: 0;
-}
-
-h3 {
-  text-align: center;
-  font-family: $cursive-handle-font-family;
-  font-size: 115%;
-  margin-top: 1%;
-  margin-bottom: 0;
-}
-
-h4 {
-  font-family: $cursive-handle-font-family;
-}
-
-button {
-  font-family: $roboto-font-family;
-  color: $primary-background;
-  background:$buttons-color;
-  border: none;
-  border-radius: 4%;
-  display: block;
-  width: 60%;
-  margin: 10px auto;
-  color: #fff;
-  height: 40px;
-  font-size: 16px;
-  cursor: pointer;
-}
-
-p {
-  margin: 0;
-}
-
-.total-spent-info {
-  text-align: center;
-  grid-row-start: 2;
-  grid-row-end: 3;
-}
-
-.trips-views-btns {
-  margin: 0;
-  grid-row-start: 3;
-  grid-row-end: 4;
-  display: grid;
-  grid-template-columns: repeat(7, 1fr);
-}
-
-.past-trips-btn {
-  grid-column-start: 2;
-  grid-column-end: 3;
-  width: 150%;
-  height: 70%;
-  font-size: 80%;
-}
-
-.upcoming-trips-btn {
-  grid-column-start: 4;
-  grid-column-end: 5;
-  width: 130%;
-  height: 70%;
-  font-size: 80%;
-}
-
-.pending-trips-btn {
-  grid-column-start: 6;
-  grid-column-end: 7;
-  width: 150%;
-  height: 70%;
-  font-size: 80%;
-}
-
-/////////////FORM SECTION /////////////////////////
-.trip-form-section {
-  border: solid black 1px;
-  border-radius: 5%;
-  grid-column-start: 2;
-  grid-column-end: span 2;
-  grid-row-start: 2;
-  grid-row-end: span 5;
-  display: grid;
-  grid-template-rows: repeat(3, 1fr);
-  grid-gap: 1%;
-}
-
-.form-instructions {
-  grid-row-start: 1;
-  grid-row-end: 2;
-}
-
-.form-fill {
-  grid-row-start: 2;
-  grid-row-end: span 2;
-  padding: 0;
-  font-family: $cursive-marker-font-family;
-}
-
-.form-planning-inputs {
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  // grid-gap: 2%;
-}
-
-.date-form-section {
-  display: flex;
-  flex-direction: column;
-  grid-column-start: 2;
-  grid-column-end: 3;
-}
-
-.destination-form-section {
-  display: flex;
-  flex-direction: column;
-  grid-column-start: 4;
-  grid-column-end: 5;
-}
-
-.days-form-section {
-  display: flex;
-  flex-direction: column;
-  grid-column-start: 6;
-  grid-column-end: 7;
-}
-
-.persons-form-section {
-  display: flex;
-  flex-direction: column;
-  grid-column-start: 8;
-  grid-column-end: 9;
-}
-
-.planning-bottom {
-  grid-column-start: 10;
-  grid-column-end: 11;
-}
-
-.instructions-header-text {
-  font-size: 155%;
-  font-family: $cursive-marker-font-family;
-  margin-bottom: 0;
-}
-
-.planning-text {
-  text-align: center;
-  font-size: 125%;
-  margin-bottom: 1%;
-}
-
-.planning-cost {
-  text-align: center;
-  font-size: 105%;
-  margin-top: 2%;
-}
-
-.submit-form-btn {
-  width: 100%;
-}
-
-
-/////////////TRIPS CARDS SECTION /////////////////////////
-.trips-view-info-section{
-  grid-column-start: 1;
-  grid-column-end: span 3;
-  grid-row-start: 7;
-  grid-row-end: span 9;
-  font-family: $lato-font-family;
-}
-
-.past-trips-view {
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  grid-gap: 2%;
-  margin-top: 5%;
-  margin-left: 15%;
-}
-
-.upcoming-trips-view {
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  grid-gap: 2%;
-  margin-top: 5%;
-  margin-left: 15%;
-}
-
-.pending-trips-view {
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  grid-gap: 2%;
-  margin-top: 5%;
-  margin-left: 15%;
-}
-
-.trips-cards {
-  border: $buttons-color 1px;
-  text-align: center;
-}
-
-.carousel-item {
-  padding: 0;
-  border: $border-color 3px;
-  opacity: 0.7;
-}
-
-.carousel-item:hover {
-  cursor: pointer;
-  opacity: 1;
-  width: 120%;
-  height: 105%;
-}
-
-.card-headers  {
-  margin: 5%;
-}
-
-.card-text {
-  font-size: 95%;
-}
-
-img {
-  width: 100%;
-  height: 100%;
-}
-
 .hidden {
   display: none;
-}
-
-///// Media Queries --------------------------------->
-
-/* 1024px | Desktop View */
-@media only screen and (min-width: 1024px) {
-  main {
-    width: 100vw;
-    height: 100vh;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(15, 1fr);
-    grid-gap: 1%;
-    color: $white-smoke-color;
-  }
-
-  header {
-    grid-column-start: 1;
-    grid-column-end: span 3;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-  }
-
-  aside {
-    border: $border-color 1px;
-    border-radius: 5%;
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row-start: 2;
-    grid-row-end: span 5;
-    display: grid;
-    grid-template-rows: repeat(3, 1fr);
-    grid-gap: 1%;
-  }
-
-  .trip-form-section {
-    border: solid black 1px;
-    border-radius: 5%;
-    grid-column-start: 2;
-    grid-column-end: span 2;
-    grid-row-start: 2;
-    grid-row-end: span 5;
-    display: grid;
-    grid-template-rows: repeat(3, 1fr);
-    grid-gap: 1%;
-  }
-
-  .trips-view-info-section{
-    grid-column-start: 1;
-    grid-column-end: span 3;
-    grid-row-start: 7;
-    grid-row-end: span 9;
-    font-family: $lato-font-family;
-  }
-
-}
-
-
-/* 320px to 600px | Mobile Devices */
-@media only screen and (min-width: 320px) and (max-width: 600px) {
-  main {
-    width: 100vw;
-    height: 100vh;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(20, 1fr);
-    grid-gap: 1%;
-    color: $white-smoke-color;
-  }
-
-  header {
-    grid-column-start: 1;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-  }
-
-  aside {
-    border: $border-color 1px;
-    border-radius: 5%;
-    grid-column-start: 1;
-    grid-row-start: 2;
-    grid-row-end: span 5;
-    display: grid;
-    grid-template-rows: repeat(3, 1fr);
-    grid-gap: 1%;
-  }
-
-  .trip-form-section {
-    border: solid black 1px;
-    border-radius: 5%;
-    grid-column-start: 1;
-    grid-row-start: 7;
-    grid-row-end: span 5;
-    display: grid;
-    grid-template-rows: repeat(3, 1fr);
-    grid-gap: 1%;
-  }
-
-  .form-instructions {
-    grid-row-start: 1;
-    grid-row-end: 2;
-  }
-
-  .form-fill {
-    grid-row-start: 2;
-    grid-row-end: span 2;
-    padding: 0;
-    font-family: $cursive-marker-font-family;
-  }
-
-  .form-planning-inputs {
-    display: grid;
-    grid-template-rows: repeat(6, 1fr);
-    grid-gap: 1%;
-  }
-
-  .date-form-section {
-    display: flex;
-    flex-direction: column;
-    grid-row-start: 1;
-    grid-row-end: 2;
-  }
-
-  .destination-form-section {
-    display: flex;
-    flex-direction: column;
-    grid-row-start: 2;
-    grid-row-end: 3;
-  }
-
-  .days-form-section {
-    display: flex;
-    flex-direction: column;
-    grid-row-start: 3;
-    grid-row-end: 4;
-  }
-
-  .persons-form-section {
-    display: flex;
-    flex-direction: column;
-    grid-row-start: 4;
-    grid-row-end: 5;
-  }
-
-  .planning-bottom {
-    grid-row-start: 5;
-    grid-row-end: 6;
-  }
-
-  .trips-view-info-section{
-    grid-column-start: 1;
-    grid-row-start: 12;
-    grid-row-end: span 9;
-    font-family: $lato-font-family;
-  }
 }
